--- a/Responsive Web Design/Form Survey/styles.css
+++ b/Responsive Web Design/Form Survey/styles.css
@@ -1,75 +1,101 @@
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    background-color: #1b1b32;
-    color: #f5f6f7;
-    font-family: Tahoma;
-    font-size: 16px;
-  }
-  
-  h1, p {
-    margin: 1em auto;
-    text-align: center;
-  }
-  
-  form {
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
-    margin: 0 auto;
-    padding-bottom: 2em;
-  }
-  
-  fieldset {
-    border: none;
-    padding: 2rem 0;
-    border-bottom: 3px solid #3b3b4f;
-  }
-  
-  fieldset:last-of-type {
-    border-bottom: none;
-  }
-  
-  label {
-    display: block;
-    margin: 0.5rem 0;
-  }
-  
-  input,
-  textarea,
-  select {
-    margin: 10px 0 0 0;
-    width: 100%;
-    min-height: 2em;
-  }
-  
-  input, textarea {
-    background-color: #0a0a23;
-    border: 1px solid #0a0a23;
-    color: #ffffff;
-  }
-  
-  .inline {
-    width: unset;
-    margin: 0 0.5em 0 0;
-    vertical-align: middle;
-  }
-  
-  input[type="submit"] {
-    display: block;
-    width: 60%;
-    margin: 1em auto;
-    height: 2em;
-    font-size: 1.1rem;
-    background-color: #3b3b4f;
-    border-color: white;
-    min-width: 300px;
-  }
-  
-  input[type="file"] {
-    padding: 1px 2px;
-  }
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-image:linear-gradient( 115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ), url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+  background-size: cover;
+  box-sizing: border-box;
+  color: #f5f6f7;
+  font-family: Tahoma;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+h1,
+p {
+  margin: 1em auto;
+  text-align: center;
+}
+
+form {
+  width: 60vw;
+  max-width: 700px;
+  min-width: 300px;
+  margin: 0 auto;
+  background-color: rgba(27, 27, 50, 0.8);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field {
+  width: auto;
+  margin: 0 0 20px 0;
+  border: 1px solid green;
+}
+
+label {
+  margin: 0.5rem 0;
+  align-items: center;
+
+
+}
+
+.col{
+  display: flex;
+  flex-direction: column;  
+  align-items: flex-start;
+  display: inline-block;
+}
+
+.checks  {
+  white-space: nowrap;
+  border: 1px solid pink;
+
+}
+
+.checks label {
+
+}
+
+input,
+textarea,
+select {
+  display: block;
+  margin: 1em 0 0 0;
+  width: 100%;
+  min-height: 1.25rem;
   
   
-  
+}
+
+input,
+textarea {
+  background-color: white;
+  border: 1px solid #0a0a23;
+  color: #1b1b32;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.5rem;
+  background-color: #3b3b4f;
+  border-color: white;
+  min-width: 300px;
+}
+
+input[type="file"] {
+  padding: 1px 2px;
+}
